--- a/Silver.HTML
+++ b/Silver.HTML
@@ -1,127 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Silver Emporium - E-commerce</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav {
-            background-color: #444;
-            padding: 10px 0;
-        }
-        nav ul {
-            list-style: none;
-            padding: 0;
-            text-align: center;
-        }
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .product-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
-        .product-card {
-            background-color: white;
-            border: 1px solid #ddd;
-            padding: 15px;
-            text-align: center;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        .product-card img {
-            max-width: 100%;
-            height: auto;
-        }
-        .product-card h3 {
-            font-size: 1.2em;
-            margin: 10px 0;
-        }
-        .product-card p {
-            color: #555;
-            margin: 5px 0;
-        }
-        .product-card button {
-            background-color: #333;
-            color: white;
-            border: none;
-            padding: 10px;
-            cursor: pointer;
-        }
-        .product-card button:hover {
-            background-color: #555;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Silver Static Site</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #000;
+      color: silver;
+    }
+
+    header {
+      text-align: center;
+      padding: 2rem 1rem;
+      border-bottom: 1px solid silver;
+    }
+
+    nav ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin: 0;
+    }
+
+    nav a {
+      color: silver;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #ccc;
+    }
+
+    main {
+      padding: 2rem;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
+    .intro {
+      text-align: center;
+      margin-bottom: 3rem;
+    }
+
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+    }
+
+    .card {
+      background-color: #111;
+      border: 1px solid silver;
+      padding: 1rem;
+      text-align: center;
+      transition: transform 0.3s, box-shadow 0.3s;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 10px silver;
+    }
+
+    .card canvas {
+      width: 100%;
+      height: 150px;
+      display: block;
+      margin-bottom: 1rem;
+    }
+
+    .card-title {
+      margin: 0.5rem 0;
+      font-size: 1.1rem;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      border-top: 1px solid silver;
+      margin-top: 4rem;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Silver Emporium</h1>
-    </header>
+  <header>
+    <h1>Silver Static Website</h1>
     <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#products">Products</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </nav>
-    <div class="container">
-        <h2>Our Products</h2>
-        <div class="product-grid">
-            <div class="product-card">
-                <img src="https://via.placeholder.com/150" alt="Product 1">
-                <h3>Silver Necklace</h3>
-                <p>$49.99</p>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="https://via.placeholder.com/150" alt="Product 2">
-                <h3>Silver Ring</h3>
-                <p>$29.99</p>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="https://via.placeholder.com/150" alt="Product 3">
-                <h3>Silver Bracelet</h3>
-                <p>$39.99</p>
-                <button>Add to Cart</button>
-            </div>
-        </div>
-    </div>
-    <footer>
-        <p>&copy; 2025 Silver Emporium. All rights reserved.</p>
-    </footer>
+  </header>
+
+  <main>
+    <section id="home" class="intro">
+      <h2>Welcome</h2>
+      <p>This is a minimalist static website with a silver-on-black design featuring 3D product animations.</p>
+    </section>
+
+    <section id="gallery" class="cards">
+      <h2 style="grid-column: 1 / -1; text-align: center;">Gallery</h2>
+      <div class="card">
+        <canvas class="product-canvas"></canvas>
+        <div class="card-title">Silver Rings</div>
+      </div>
+      <div class="card">
+        <canvas class="product-canvas"></canvas>
+        <div class="card-title">Silver Earrings</div>
+      </div>
+      <div class="card">
+        <canvas class="product-canvas"></canvas>
+        <div class="card-title">Silver Chains</div>
+      </div>
+      <div class="card">
+        <canvas class="product-canvas"></canvas>
+        <div class="card-title">Silver Pendants</div>
+      </div>
+      <div class="card">
+        <canvas class="product-canvas"></canvas>
+        <div class="card-title">Silver Pendant Sets</div>
+      </div>
+      <div class="card">
+        <canvas class="product-canvas"></canvas>
+        <div class="card-title">Silver Necklaces</div>
+      </div>
+      <div class="card">
+        <canvas class="product-canvas"></canvas>
+        <div class="card-title">Silver Bangles</div>
+      </div>
+      <div class="card">
+        <canvas class="product-canvas"></canvas>
+        <div class="card-title">Silver Bracelets</div>
+      </div>
+      <div class="card">
+        <canvas class="product-canvas"></canvas>
+        <div class="card-title">Silver Accessories</div>
+      </div>
+      <div class="card">
+        <canvas class="product-canvas"></canvas>
+        <div class="card-title">Silver Items</div>
+      </div>
+      <div class="card">
+        <canvas class="product-canvas"></canvas>
+        <div class="card-title">Pooja Essentials</div>
+      </div>
+      <div class="card">
+        <canvas class="product-canvas"></canvas>
+        <div class="card-title">SilverWare</div>
+      </div>
+      <div class="card">
+        <canvas class="product-canvas"></canvas>
+        <div class="card-title">Silver Gifts</div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Silver Static Co.</p>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script>
+    // Initialize 3D scenes for each product card
+    const canvases = document.querySelectorAll('.product-canvas');
+    canvases.forEach(canvas => {
+      // Create scene
+      const scene = new THREE.Scene();
+      const camera = new THREE.PerspectiveCamera(75, canvas.clientWidth / 150, 0.1, 1000);
+      const renderer = new THREE.WebGLRenderer({ canvas: canvas, alpha: true });
+      renderer.setSize(canvas.clientWidth, 150);
+
+      // Create a silver-colored cube
+      const geometry = new THREE.BoxGeometry(1, 1, 1);
+      const material = new THREE.MeshStandardMaterial({ color: 0xc0c0c0, metalness: 0.8, roughness: 0.2 });
+      const cube = new THREE.Mesh(geometry, material);
+      scene.add(cube);
+
+      // Add lighting
+      const ambientLight = new THREE.AmbientLight(0x404040);
+      scene.add(ambientLight);
+      const pointLight = new THREE.PointLight(0xffffff, 0.8);
+      pointLight.position.set(5, 5, 5);
+      scene.add(pointLight);
+
+      camera.position.z = 2;
+
+      // Animation loop
+      function animate() {
+        requestAnimationFrame(animate);
+        cube.rotation.x += 0.01;
+        cube.rotation.y += 0.01;
+        renderer.render(scene, camera);
+      }
+      animate();
+
+      // Handle resize
+      window.addEventListener('resize', () => {
+        renderer.setSize(canvas.clientWidth, 150);
+        camera.aspect = canvas.clientWidth / 150;
+        camera.updateProjectionMatrix();
+      });
+    });
+  </script>
 </body>
 </html>
